plugins {
    id 'java'
    id 'application'
}

application {
    mainClassName = 'Main'
}

group = 'org.shahan'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23) // OpenJDK 23
    }
}


dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

}

test {
    useJUnitPlatform()
}


